New in spot 2.6.1.dev (not yet released)

  Build:

  - We no longer distribute the Python-based CGI script + javascript
    code for the online translator.  Its replacement has its own
    repository: https://gitlab.lrde.epita.fr/spot/spot-web-app/

New in spot 2.6.1  (2018-08-04)

  Command-line tools:

  - "ltlfilt --suspendable" is now a synonym for
    "ltlfilt --universal --eventual".

  Bugs fixed:

  - scc_info::split_on_sets() did not correctly register the
    atomic propositions of the returned automata.

  - The spot::tl_simplifier class could raise an exception while
    attempting to reduce formulas containing unsimplified <->, -> or
    xor, if options nenoform_stop_on_boolean and synt_impl are both
    set.  (This combination of options is not available from
    command-line tools.)

  - The spot::contains(a, b) function introduced in 2.6 was testing
    a⊆b instead of a⊇b as one would expect.  Infortunately the
    documentation was also matching the code, so this is a backward
    incompatible change, but a short-lived one.

  - The Python binding of the getter of spot::parsed_formula::f was
    returning a reference instead of a copy, causing issues if the
    reference outlasted the parsed_formula struct.


New in spot 2.6  (2018-07-04)

  Command-line tools:

  - autfilt learned --is-colored to filter automata that use
    exactly one acceptance set per mark or transition.

  - autfilt learned --has-univ-branching and --has-exist-branching
    to keep automata that have universal branching, or that make
    non-deterministic choices.

  - autcross' tool specifications now have %M replaced by the name of
    the input automaton.

  - autcross now aborts if there is any parser diagnostic for the
    input automata (previous versions would use the input automaton
    whenever the parser would manage to read something).

  - ltlcross, ltldo, and autcross learned shorthands to call
    delag, ltl2dra, ltl2dgra, and nba2dpa.
