@@ -6,6 +6,14 @@ New in spot 2.6.1.dev (not yet released)
     code for the online translator.  Its replacement has its own
     repository: https://gitlab.lrde.epita.fr/spot/spot-web-app/
 
+  Library:
+
+  - When states are highlighted with more than 8 colors, print_dot()
+    will add some extra markers to help distinguishing the colors.
+    This helps with the fact that colors 8-15 are lighter versions of
+    colors 0-7, and that higher color numbers cycle into this 16-color
+    palette.
+
 New in spot 2.6.1  (2018-08-04)
 
   Command-line tools:
